# rustytok

./: Cargo.toml  Dockerfile  README.md
src/: config.rs  error.rs  main.rs
src/routes/: home.rs  mod.rs  proxy.rs  tag.rs  user.rs  video.rs
src/tiktok/: client.rs  mod.rs  parser.rs  types.rs
static/: style.css
templates/: base.html  home.html  tag.html  user.html  video.html
