[package]
name = "rustytok"
version = "0.1.0"
edition = "2021"
description = "Privacy-friendly TikTok frontend - all requests proxied server-side"
license = "AGPL-3.0"
repository = "https://github.com/YOUR_USERNAME/rustytok"
keywords = ["tiktok", "privacy", "proxy", "frontend"]
categories = ["web-programming"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# HTTP client for proxying
reqwest = { version = "0.12", features = ["json", "stream"] }

# Templating
askama = "0.12"
askama_axum = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML parsing
scraper = "0.20"

# Environment config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# URL handling
url = "2"
regex = "1"
urlencoding = "2"
once_cell = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
